# WhatAnime

./: docker-compose.yml  todo.md
my-app/: dockerfile  index.html  package-lock.json  package.json  vite.config.ts
my-app/src/: AnimeEntry.css  AnimeEntry.tsx  AnimeList.tsx  main.tsx  mycss.css  report_window.css  report_window.tsx  update.tsx
react-frontend/: index.html  package-lock.json  package.json
rust-backend/: Cargo.toml  Dockerfile
rust-backend/src/: error.rs  main.rs  types.rs
rust-backend/src/Anilist/: mod.rs  types.rs
rust-backend/src/anisong/: mod.rs
rust-backend/src/database/: databasetypes.rs  findAnimeNoDb.rs  find_anime_no_db.rs  mod.rs  regex_search.rs
rust-backend/src/database/migrations/: 20250226184129_create_anime_tables.sql  20250228020509_user_add_and_time_rows.sql  20250301182727_anilist_switch.sql  20250304104427_multi_bind.sql  20250312152150_reports_table.sql  20250312165740_report_date.sql  20250317203506_int-float.sql  20250317204731_sad.sql  20250322223120_allow_null_repport.sql
rust-backend/src/database/unrun_migrations/: 20250307121115_allow_null.sql  20250318124226_seperate-artists.sql
rust-backend/src/japanese_processing/: mod.rs
rust-backend/src/link/: mod.rs
rust-backend/src/routes/: callback.rs  confirm_anime.rs  login.rs  mod.rs  report.rs  update.rs
rust-backend/src/spotify/: api.rs  mod.rs  responses.rs
scripts/: 20250318124226_artist_sep.py  anisongdb.py  bind_song.py  database.py  manual_artist.py  parse_reports.py  remove_song_link.py  song_group_migration.py  update_anilist.py  utility.py
