[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6.2", features = ["cors"] }
dotenv = "0.15.0"
rand = "0.9.0"
hex = "0.4.3"
axum-sessions = "0.6.1"
tower-sessions = "0.14.0"
url = "2.5.4"
base64 = "0.22.1"
reqwest = { version = "0.12.12", features = ["json"] }
fuzzywuzzy = "0.0.2"
regex = "1.11.1"
kakasi = "0.1.0"
itertools = "0.14.0"
env_logger = "0.11.6"
display = "0.1.2"
deunicode = "1.6.0"
sqlx = {version="0.8.3", features = ["runtime-tokio", "postgres"]}
futures = "0.3.31"
